Доработал метод findEventByIdPublic